RESOLVED FIXED 244126
AX: After a dynamic contenteditable change, accessibility objects do not update their role
https://bugs.webkit.org/show_bug.cgi?id=244126
Summary AX: After a dynamic contenteditable change, accessibility objects do not upda...
Tyler Wilcock
Reported 2022-08-19 09:29:39 PDT
AX: After a dynamic contenteditable change, accessibility objects do not update their role
Attachments
Patch (5.23 KB, patch)
2022-08-19 09:45 PDT, Tyler Wilcock
no flags
Patch (6.01 KB, patch)
2022-08-19 19:14 PDT, Tyler Wilcock
no flags
Patch (6.03 KB, patch)
2022-08-19 19:24 PDT, Tyler Wilcock
no flags
Patch (7.13 KB, patch)
2022-08-19 21:30 PDT, Tyler Wilcock
no flags
Patch (7.17 KB, patch)
2022-08-20 00:59 PDT, Tyler Wilcock
no flags
Patch (7.18 KB, patch)
2022-08-20 09:31 PDT, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2022-08-19 09:29:49 PDT
Tyler Wilcock
Comment 2 2022-08-19 09:45:50 PDT
chris fleizach
Comment 3 2022-08-19 09:59:12 PDT
good patch
Tyler Wilcock
Comment 4 2022-08-19 19:14:04 PDT
Tyler Wilcock
Comment 5 2022-08-19 19:24:07 PDT
Tyler Wilcock
Comment 6 2022-08-19 21:30:06 PDT
Tyler Wilcock
Comment 7 2022-08-20 00:59:46 PDT
Tyler Wilcock
Comment 8 2022-08-20 09:31:49 PDT
EWS
Comment 9 2022-08-21 12:01:12 PDT
Committed 253630@main (c05d71ccc08b): <https://commits.webkit.org/253630@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 461763 [details].
Note You need to log in before you can comment on or make changes to this bug.