Cherry-pick c05d71ccc08b. rdar://problem/98886191

AX: After a dynamic contenteditable change, accessibility objects do not update their role
    https://bugs.webkit.org/show_bug.cgi?id=244126
    rdar://problem/98886191

    Reviewed by Chris Fleizach.

    With this patch, we now update the role of the object associated with
    the contenteditable change.

    * LayoutTests/accessibility/dynamically-unignored-contenteditable-expected.txt: Added.
    * LayoutTests/accessibility/dynamically-unignored-contenteditable.html: Added.
    * LayoutTests/platform/glib/accessibility/dynamically-unignored-contenteditable-expected.txt: Added.
    * Source/WebCore/accessibility/AXObjectCache.cpp:
    (WebCore::AXObjectCache::handleAttributeChange):

    Canonical link: https://commits.webkit.org/253630@main

Canonical link: https://commits.webkit.org/252432.220@safari-7614-branch